--- a/test1/test1.vcxproj
+++ b/test1/test1.vcxproj
@@ -141,11 +141,13 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="Compensator.cpp" />
     <ClCompile Include="Source.cpp" />
     <ClCompile Include="DynaSinTable.cpp" />
     <ClCompile Include="Svpwm.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="Compensator.h" />
     <ClInclude Include="DynaSinTable.h" />
     <ClInclude Include="Svpwm.h" />
   </ItemGroup>
