--- a/test1/test1.vcxproj.filters
+++ b/test1/test1.vcxproj.filters
@@ -24,12 +24,18 @@
     <ClCompile Include="Svpwm.cpp">
       <Filter>資源檔</Filter>
     </ClCompile>
+    <ClCompile Include="Compensator.cpp">
+      <Filter>資源檔</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="DynaSinTable.h">
       <Filter>標頭檔</Filter>
     </ClInclude>
     <ClInclude Include="Svpwm.h">
+      <Filter>標頭檔</Filter>
+    </ClInclude>
+    <ClInclude Include="Compensator.h">
       <Filter>標頭檔</Filter>
     </ClInclude>
   </ItemGroup>
