--- a/test1/test1.vcxproj.filters
+++ b/test1/test1.vcxproj.filters
@@ -18,36 +18,30 @@
     <ClCompile Include="Source.c">
       <Filter>資源檔</Filter>
     </ClCompile>
-    <ClCompile Include="DynaSinTable.c">
+    <ClCompile Include="SinTable.c">
       <Filter>資源檔</Filter>
     </ClCompile>
-    <ClCompile Include="Svpwm.c">
+    <ClCompile Include="IntPoPwm.c">
       <Filter>資源檔</Filter>
     </ClCompile>
-    <ClCompile Include="Compensator.c">
-      <Filter>資源檔</Filter>
-    </ClCompile>
-    <ClCompile Include="IFeedBack.c">
-      <Filter>資源檔</Filter>
-    </ClCompile>
-    <ClCompile Include="LLFeedBack.c">
+    <ClCompile Include="Compensator_2.c">
       <Filter>資源檔</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="DynaSinTable.h">
+    <ClInclude Include="SinTable.h">
       <Filter>標頭檔</Filter>
     </ClInclude>
-    <ClInclude Include="Svpwm.h">
+    <ClInclude Include="IntPoPwm.h">
       <Filter>標頭檔</Filter>
     </ClInclude>
-    <ClInclude Include="Compensator.h">
+    <ClInclude Include="IntPoPwm_cfg_2c.h">
       <Filter>標頭檔</Filter>
     </ClInclude>
-    <ClInclude Include="IFeedBack.h">
+    <ClInclude Include="IntPoPwm_cfg_3c.h">
       <Filter>標頭檔</Filter>
     </ClInclude>
-    <ClInclude Include="LLFeedBack.h">
+    <ClInclude Include="Compenastor_2.h">
       <Filter>標頭檔</Filter>
     </ClInclude>
   </ItemGroup>
